kubernetes/api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    # use ClusterIP with ingress
    type: ClusterIP
    ports:
    # service listens on http (80)
    - port: 3000
    # sends to a pod on port 8080
      targetPort: 3000
    selector:
        app: api
